# reference-library

./: .bandit  .codecov.yml  .editorconfig  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  README.md  REUSE.toml  SECURITY.md  phase_2_5_samples.md  pyproject.toml  renovate.json  sonar-project.properties
.claude/: compliance-overrides.md  settings.json
.claude/agents/: document-validator.md  writing-style-editor.md
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  claude-baseline-review.yml  codeql.yml  dependency-review.yml  pr-validation.yml  qlty.yml  repo-health.yml  reuse.yml  sbom.yml  scorecard.yml  security-analysis.yml  sonarcloud.yml
.qlty/: logs  out  plugin_cachedir  qlty.toml  results
.qlty/configs/: .markdownlint.yaml
.sonarlint/: connectedMode.json
LICENSES/: MIT.txt
agents/: audience-reaction-analyzer.md  document-drafter.md  document-validator.md  grammar-composition-editor.md  style-analyzer.md  tone-rewriter.md  writing-style-editor.md
config/: profiles.example.toml
docs/: known-vulnerabilities.md  reusable-workflow-jobs.yaml
docs/architecture/: adr-001-writing-authority-hierarchy.md
docs/audit/2026-05-29/: 00-final-report.md  01-dependencies.md  02-code-quality.md  03-architecture.md  04-security.md  05-cicd.md  06-docs.md  findings.csv  findings.json
docs/research/2026-04-ai-detection-audit/: stylometry-results.json  stylometry_analyzer.py
legal-style/: QUICK-START.md  README.md  cross-reference.md
legal-style/appellate-style-manual/: README.md  citations.md  formatting.md  quotations.md  style-grammar.md
legal-style/lc-drafting-manual/: README.md  bill-structure.md  defined-terms.md  numbering-formatting.md  sentence-construction.md
legal-style/lc-form-style-manual/: README.md  bill-formatting.md  grammar-punctuation.md  ors-citations.md
legal-style/source-pdfs/: checksums.sha256
phase_2_5_harness/: .env.example  .gitignore  .secrets.baseline  README.md  pyproject.toml
samples/: README.md
samples/after/01-paragraph-summary/: recap.md  stage-1-grammar.md  stage-2-validation.md  stage-3-voice.md
samples/after/02-client-status-email/: recap.md  stage-1-grammar.md  stage-2-validation.md  stage-3-voice.md
samples/after/03-expense-policy-memo/: recap.md  stage-1-grammar.md  stage-2-validation.md  stage-3-voice.md
samples/after/04-onboarding-proposal/: recap.md  stage-1-grammar.md  stage-2-validation.md  stage-3-voice.md
samples/after/05-workforce-planning-analysis/: recap.md  stage-1-grammar.md  stage-2-validation.md  stage-3-voice.md
samples/before/: 01-paragraph-summary.md  02-client-status-email.md  03-expense-policy-memo.md  04-onboarding-proposal.md  05-workforce-planning-analysis.md
scripts/: build_phase_2_5_package.py  extract_legal_pdfs.py  generate_before_samples.py  profile_resolver.py  setup.sh
tests/: test_extract_legal_pdfs.py  test_generate_before_samples.py  test_profile_resolver.py
writing-style/: README.md  ai-detection.md  logical-fallacies-guide.md  plain-language-guide.md  punctuation-preferences.md  structural-formatting.md  style-profile.md  tone-voice.md  transition-words-reference.md
writing-style/grammar-style/: QUICK-START.md  cross-reference.md  index.md
writing-style/grammar-style/chicago-manual/: README.md  capitalization.md  citations-documentation.md  common-errors.md  grammar-usage.md  numbers.md  punctuation.md
writing-style/grammar-style/elements-of-style/: README.md  principles-composition.md  rules-of-usage.md  words-expressions.md
