# Python tooling for the reference-library scripts/ directory.
# This is a docs-first repository; pyproject.toml exists only to configure
# pytest and coverage so SonarCloud can verify quality gates on the small
# amount of Python that lives in scripts/.

[project]
name = "reference-library-scripts"
version = "0.0.0"
# scripts/profile_resolver.py uses tomllib (stdlib in 3.11+) with a tomli
# fallback. CI runs on 3.12; the floor stays at 3.11 to match.
requires-python = ">=3.11"

[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = ["scripts"]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["scripts"]
# Only profile_resolver.py participates in the V2 invocation flow today.
# The other scripts are operational utilities (one-shot PDF extraction,
# one-shot sample generation) without test coverage; omit them so the
# Sonar gate evaluates against what we actually exercise.
omit = [
    "scripts/extract_legal_pdfs.py",
    "scripts/generate_before_samples.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false

# Scoped to scripts/ and tests/ only. The repository is docs-first; the
# rest of the tree is reference material that is not authored under these
# linting rules.
[tool.ruff]
line-length = 88
target-version = "py311"
src = ["scripts", "tests"]
# extract_legal_pdfs.py and generate_before_samples.py are pre-V2
# operational utilities with their own existing review baseline (see the
# qlty-ignore comments in each). Excluding them keeps the new linting
# config scoped to V2 code without forcing an unrelated cleanup sweep.
extend-exclude = [
    "scripts/extract_legal_pdfs.py",
    "scripts/generate_before_samples.py",
]

[tool.ruff.lint]
# PyStrict-aligned subset: pycodestyle errors and warnings, pyflakes,
# isort, bugbear, comprehensions, simplify, pyupgrade. Kept narrow so we
# don't have to suppress on unrelated repo content; expand opportunistically.
select = ["E", "F", "W", "I", "B", "C4", "SIM", "UP"]

[tool.basedpyright]
# Strict only for the V2 entry point. The other scripts/ entries are
# operational utilities (one-shot PDF extraction, one-shot sample
# generation) that do not warrant strict typing today.
include = ["scripts/profile_resolver.py", "tests/"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
