# Python tooling for the reference-library scripts/ directory.
# This is a docs-first repository; pyproject.toml exists only to configure
# the dev toolchain (pytest, coverage, ruff, type checking) for the small
# amount of Python that lives in scripts/.

[project]
name = "reference-library-scripts"
version = "0.0.0"
# scripts/profile_resolver.py uses tomllib (stdlib in 3.11+).
# CI runs on 3.12; the floor stays at 3.11 to match.
requires-python = ">=3.11"

# Dev toolchain. Declared here and locked in uv.lock so local runs, CI, and
# pre-commit resolve identical versions. There are no runtime dependencies;
# the scripts use only the standard library.
[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<7",
    "ruff>=0.6",
    "mypy>=1.11",
    "basedpyright>=1.18",
]

[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = ["scripts"]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["scripts"]
# Only profile_resolver.py participates in the V2 invocation flow today and
# carries tests. The other two scripts are operational utilities (one-shot
# PDF extraction, one-shot sample generation) that are linted and type-aware
# but not yet unit-tested; omit them from coverage until tests land so the
# gate evaluates against what we actually exercise. Adding those tests is a
# tracked follow-up (audit finding CQ-03).
omit = [
    "scripts/extract_legal_pdfs.py",
    "scripts/generate_before_samples.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false

# Scoped to scripts/ and tests/ only. The repository is docs-first; the
# rest of the tree is reference material that is not authored under these
# linting rules.
[tool.ruff]
line-length = 88
target-version = "py311"
src = ["scripts", "tests"]
# All of scripts/ and tests/ is linted. The repository is docs-first; the
# rest of the tree is reference material not authored under these rules.

[tool.ruff.lint]
# PyStrict-aligned subset: pycodestyle errors and warnings, pyflakes,
# isort, bugbear, comprehensions, simplify, pyupgrade. Kept narrow so we
# don't have to suppress on unrelated repo content; expand opportunistically.
select = ["E", "F", "W", "I", "B", "C4", "SIM", "UP"]

[tool.basedpyright]
# Strict only for the V2 entry point. The other scripts/ entries are
# operational utilities (one-shot PDF extraction, one-shot sample
# generation) that do not warrant strict typing today.
include = ["scripts/profile_resolver.py", "tests/"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
