# Python tooling for the reference-library scripts/ directory.
# This is a docs-first repository; pyproject.toml exists only to configure
# the dev toolchain (pytest, coverage, ruff, type checking) for the small
# amount of Python that lives in scripts/.

[project]
name = "reference-library-scripts"
version = "0.0.0"
# scripts/profile_resolver.py uses tomllib (stdlib in 3.11+).
# CI runs on 3.12; the floor stays at 3.11 to match.
requires-python = ">=3.11"

# Dev toolchain. Declared here and locked in uv.lock so local runs, CI, and
# pre-commit resolve identical versions. There are no runtime dependencies;
# the scripts use only the standard library.
[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<7",
    "ruff>=0.6",
    "mypy>=1.11",
    "basedpyright>=1.18",
]

[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = ["scripts"]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["scripts"]
# All three scripts are measured. The extraction and sample-generation
# scripts have unit tests covering their pure helpers (checksum parsing and
# verification, frontmatter building, .env key parsing); the functions that
# shell out to external binaries or the network are not exercised and show
# as missing, which is expected.

[tool.coverage.report]
show_missing = true
skip_covered = false

# Scoped to scripts/ and tests/ only. The repository is docs-first; the
# rest of the tree is reference material that is not authored under these
# linting rules.
[tool.ruff]
line-length = 88
target-version = "py311"
src = ["scripts", "tests"]
# All of scripts/ and tests/ is linted. The repository is docs-first; the
# rest of the tree is reference material not authored under these rules.

[tool.ruff.lint]
# PyStrict-aligned subset: pycodestyle errors and warnings, pyflakes,
# isort, bugbear, comprehensions, simplify, pyupgrade. Kept narrow so we
# don't have to suppress on unrelated repo content; expand opportunistically.
select = ["E", "F", "W", "I", "B", "C4", "SIM", "UP"]

[tool.basedpyright]
# Strict only for the V2 entry point. The other scripts/ entries are
# operational utilities (one-shot PDF extraction, one-shot sample
# generation) that do not warrant strict typing today.
include = ["scripts/profile_resolver.py", "tests/"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
# Mirrors pytest's pythonpath so that test imports of scripts resolve.
extraPaths = ["scripts"]

# Bandit is not wired into CI or pre-commit for this docs-first repository:
# .pre-commit-config.yaml omits the bandit hook and
# .github/workflows/security-analysis.yml sets run-bandit: false. This block
# governs on-demand local scans, invoked with an explicit config path:
#   uv tool run --from bandit bandit -c pyproject.toml -r scripts tests
[tool.bandit]
# No global skips: every check stays active for scripts/ and tests/.
# Per-check exclusions live in the plugin sub-tables below.

[tool.bandit.assert_used]
# B101 (assert usage) is a false positive in pytest test files: pytest
# rewrites asserts and never runs the suite with -O. Skip B101 for test
# files only, so it remains active for scripts/.
skips = ["*_test.py", "*/test_*.py"]
