[project]
name = "harness"
version = "0.1.0"
description = "AI-detector evaluation harness for the Phase 2.5 sample package"
authors = [
    {name = "reference-library research branch"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic (>=2.7,<3.0)",
    "pydantic-settings (>=2.3,<3.0)",
    "httpx (>=0.27,<1.0)",
    "tenacity (>=8.4,<9.0)",
    "python-dotenv (>=1.0,<2.0)",
    "pyyaml (>=6.0,<7.0)",
    "typer (>=0.12,<1.0)",
]

[project.scripts]
parse-samples = "harness.parse_samples:app"
run-harness = "harness.runner:app"
build-report = "harness.report:app"

[tool.poetry]
packages = [{include = "harness", from = "src"}]

[tool.poetry.group.dev.dependencies]
ruff = "^0.6"
mypy = "^1.11"
bandit = "^1.7"
pytest = "^8.3"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
types-pyyaml = "^6.0"
respx = "^0.21"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "B",
    "UP",
    "SIM",
    "C4",
    "RUF",
    "D",
    "ANN",
    "S",
    "PTH",
    "TID",
    "RET",
    "PL",
]
ignore = [
    "D203",
    "D213",
    "ANN401",
    "PLR2004",
    "S101",
    "COM812",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "ANN", "S", "PLR"]
"src/harness/detectors/binoculars.py" = ["D"]
"src/harness/detectors/fast_detect_gpt.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_return_any = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
markers = [
    "integration: live API calls (requires credentials, opt-in via -m integration)",
    "local: requires local model weights (opt-in via -m local)",
]

[tool.coverage.run]
source = ["src/harness"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
